--- a/parts/client/watson.jade
+++ b/parts/client/watson.jade
@@ -27,14 +27,14 @@ template(name='doc_emotion')
     //- div
     //- if above_50 'joy_percent'
         //- .spacer
-    .rounded.invert(class=omega_dark_mode_class style="height:7px;width:{{to_percent joy_percent}}%;background-color:green" title="{{to_percent joy_percent}}% joy")
-    span.ui.large.green.text(class="{{calculated_size joy_percent}}") {{ to_percent joy_percent }}% joy 
+    span.ui.large.green.invert.text(class="{{calculated_size joy_percent}}") {{ to_percent joy_percent }}% joy 
         |&nbsp;
-    .rounded.invert(class=omega_dark_mode_class style="height:7px;width:{{to_percent sadness_percent}}%;background-color:blue" title="{{to_percent sadness_percent}}% sad")
+    .rounded.invert(class=omega_dark_mode_class style="height:7px;width:{{to_percent joy_percent}}%;background-color:green" title="{{to_percent joy_percent}}% joy")
     //- if above_50 'sadness_percent'
         //- .spacer
     span.ui.large.blue.invert.text(class="{{calculated_size sadness_percent}}") {{ to_percent sadness_percent}}% sad 
         |&nbsp;
+    .rounded.invert(class=omega_dark_mode_class style="height:7px;width:{{to_percent sadness_percent}}%;background-color:blue" title="{{to_percent sadness_percent}}% sad")
     //- if above_50 'fear_percent'
         //- .spacer
     span.ui.large.grey.invert.text(class="{{calculated_size fear_percent}}") {{ to_percent fear_percent }}% fear 
@@ -93,7 +93,7 @@ template(name='keywords')
                 .meta
                     .ui.list 
                         .item {{ to_percent relevance }}% relevant
-                        .item sentiment:  {{ sentiment.label }} {{ to_percent sentiment.score }}%:
+                        .item {{ sentiment.label }} {{ to_percent sentiment.score }}%:
                         .item #{count} count
                 .description
                     if emotion
