--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -313,12 +313,12 @@ input
 
 
 .rounded {
-  /*border-radius: 10px !important; */
+  border-radius: 10px !important; 
 }
 
 .card {
     /* background: black !important; */
-    /*border-radius: 10px !important; */
+    border-radius: 10px !important; 
 }
 
 a.goto_article {
@@ -520,17 +520,17 @@ a.title, #title {
 
 .label {
   margin:3px !important;
-  /*border-radius: 7px !important; */
+  border-radius: 7px !important; 
 }
 
 input {
     margin: 5px !important;
-    /*border-radius: 7px !important; */
+    border-radius: 7px !important; 
 }
 
 ::-webkit-scrollbar {
   width: 0px !important;
-  /*border-radius: 10px !important;*/
+  border-radius: 10px !important;
 }
 .wrap_input {
     text-align:center !important;
@@ -605,12 +605,15 @@ input {
 /*}*/
 
 
-
+.button{
+  border-radius: 10px !important;  
+}
 .button:active{
+  border-radius: 20px !important;  
     /* transition: all .25s !important; */
-    transform: translate(0, 1px) !important; 
-    zoom:105% !important;
-    -webkit-transform: translate(0, 1px) !important;
+    /*transform: translate(0, 1px) !important; */
+    /*zoom:105% !important;*/
+    /*-webkit-transform: translate(0, 1px) !important;*/
 } 
 
 
