--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -19,7 +19,7 @@ template(name='stack')
                         .item
                             a.ui.small.header(href="/site/#{api_site_parameter}")
                                 img(src=icon_url)
-                                |#{name}
+                                |!{name}
                 // .ui.inline.header 
                 //     i.question.icon
                 //     |questions
