--- a/parts/client/watson.jade
+++ b/parts/client/watson.jade
@@ -261,11 +261,11 @@ template(name='watson_view')
     
 template(name='watson_full')
     // if view_detail
-    .ui.tiny.grey.inline.header(title='reddit user') 
-        i.user.outline.icon 
-        |#{author}
-    .ui.mini.inline.header domain: #{domain}
-    .ui.mini.inline.header permalink: #{permalink}
+    // .ui.tiny.grey.inline.header(title='reddit user') 
+    //     i.user.outline.icon 
+    //     |#{author}
+    // .ui.mini.inline.header domain: #{domain}
+    // .ui.mini.inline.header permalink: #{permalink}
     div 
     if categories
         i.grey.cubes.icon(title='categories')
