rename stack_page to question_page, working get question_answers and display

--- a/parts/client/question_page.jade
+++ b/parts/client/question_page.jade
@@ -18,7 +18,7 @@ template(name='stack_page')
                         img.ui.invert.image(src=watson.metadata.image)    
 
                     each tags 
-                        a.ui.basic.pointer.label.add_stack_tag #{this}
+                        a.ui.basic.large.pointer.label.add_stack_tag #{this}
                     if is_answered
                         .ui.basic.inverted.green.invert.large.label
                             i.green.checkmark.icon
@@ -30,36 +30,6 @@ template(name='stack_page')
                     .ui.large.basic.label 
                         i.eye.icon
                         |#{view_count}
-                        
-                .eight.wide.column.srolling
-                    i.big.refresh.circular.link.icon.get_question
-                    +skve k='stack_section' v='main' l='content' i='content' 
-                    +skve k='stack_section' v='watson' l='watson' i='brain' 
-                    if tone
-                        +skve k='stack_section' v='tone' l='tone' i='user' 
-                    // +skve k='stack_section' v='embed' l='embed' i='layout' 
-                    if skv_is 'stack_section' 'tone'
-                        if watson 
-                            if tone
-                                +tone
-                    else if skv_is 'stack_section' 'main'
-                        .invert.ui.teritary.segment
-                            |!{body}
-                    else if skv_is 'stack_section' 'watson'
-                        if watson 
-                            .ui.fluid.button.call_tone 
-                                i.smile.icon
-                                |analyze tone
-                            +watson_view
-                            +watson_full
-                    unless watson
-                        .ui.big.fluid.button.call_watson
-                            i.large.brain.icon
-                            |analyze
-                    if skv_is 'stack_section' 'embed'
-                        iframe(width="100%" height="500" src=link frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
-                    +comments
-                .four.wide.column
                     .ui.list
                         .item #{view_count} views
                         .item id #{_id}
@@ -87,6 +57,38 @@ template(name='stack_page')
                     +print_this
                     +doc_sentiment
                     +doc_emotion
+                .twelve.wide.column
+                    .invert.ui.teritary.segment.scrolling
+                        |!{body}
+                    each question_answers
+                        .ui.segment
+                            |!{body}
+                    i.big.refresh.circular.link.icon.get_question
+                    i.big.exclamation.circular.link.icon.get_answers
+                    // +skve k='stack_section' v='main' l='content' i='content' 
+                    +skve k='stack_section' v='watson' l='watson' i='brain' 
+                    if tone
+                        +skve k='stack_section' v='tone' l='tone' i='user' 
+                    // +skve k='stack_section' v='embed' l='embed' i='layout' 
+                    if skv_is 'stack_section' 'tone'
+                        if watson 
+                            if tone
+                                +tone
+                        // else if skv_is 'stack_section' 'main'
+                    else if skv_is 'stack_section' 'watson'
+                        if watson 
+                            .ui.fluid.button.call_tone 
+                                i.smile.icon
+                                |analyze tone
+                            +watson_view
+                            +watson_full
+                    unless watson
+                        .ui.big.fluid.button.call_watson
+                            i.large.brain.icon
+                            |analyze
+                    // if skv_is 'stack_section' 'embed'
+                    //     iframe(width="100%" height="500" src=link frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
+                    +comments
 
         
             
