add dash nav profile

--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -30,7 +30,7 @@ head
 
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
+    // script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
 
     
     script.
@@ -48,8 +48,9 @@ head
 //             source(src='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.webm', data-wf-ignore='true')
 
 template(name='layout')
-    // +nav
+    +nav
     +yield
+    
     
     
 template(name='not_found')
