--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -39,9 +39,6 @@ head
         gtag('js', new Date());
         gtag('config', 'UA-156965333-1');
 
-// body
-//     +nav
-//     +dao
 //     .adventure-vidm(class=currentUser.invert_class data-poster-url='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-poster-00001.jpg', data-video-urls='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.mp4,https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.webm', data-autoplay='true', data-loop='true', data-wf-ignore='true')
 //         video(autoplay='', loop='', style='background-image:url("https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-poster-00001.jpg")', muted='', playsinline='', data-wf-ignore='true', data-object-fit='cover')
 //             source(src='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.mp4', data-wf-ignore='true')
@@ -49,7 +46,19 @@ head
 
 template(name='layout')
     +nav
-    +yield
+    .ui.bottom.attached.pushable.segment
+        +leftbar
+        +rightbar
+                
+        // #main_area.global_container.pusher.invert
+        #main_area.global_container.pusher(class=currentUser.invert_class)
+            +yield
+        // .scrolling
+        // if currentUser
+        //     +bottom_nav
+    +chatpop
+    +footer
+
     
     
     
