--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -8,19 +8,19 @@ template(name='nav')
                 i.big.yin.yang.icon
             a.icon.item(href='/stack')
                 i.big.stack.exchange.icon
-            // a.icon.item(href='/groups')
-            //     i.big.users.icon
-            // a.icon.item(href='/requests')
-            //     i.big.hand.holding.icon
-            // a.icon.item(href='/events')
-            //     i.big.calendar.icon
+            a.icon.item(href='/groups')
+                i.big.users.icon
+            a.icon.item(href='/requests')
+                i.big.hand.holding.icon
+            a.icon.item(href='/events')
+                i.big.calendar.icon
             // .ui.search.item
             //     .ui.transparent.inverted.input
             //         input(type='text')
-            // a.icon.item(href='/reddit')
-            //     i.big.reddit.icon
-            // a.icon.item(href='/wikipedia')
-            //     i.big.wikipedia.icon
+            a.icon.item(href='/reddit')
+                i.big.reddit.icon
+            a.icon.item(href='/wikipedia')
+                i.big.wikipedia.icon
         unless connected
             .item
                 i.yin.yang.loading.big.icon
