fix delta value v input fv, init working stack_site model

--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -453,7 +453,7 @@ template(name='text_edit')
             |#{k}
             //- +clear_value
     .ui.input(class=input_class)
-        input.edit_text(type='text' v=fv placeholder=placeholder autocomplete="off")
+        input.edit_text(type='text' value=fv placeholder=placeholder autocomplete="off")
         
 
 template(name='text_view')
