--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -8,7 +8,7 @@ body {
     /*scroll-behavior: smooth;*/
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
-    filter: invert(1) !important; 
+    /*filter: invert(1) !important; */
      /*overscroll-behavior: none; */
     /*transition: all .25s ease !important;*/
     /* background: #0e0e44 !important; */
@@ -365,7 +365,7 @@ a.goto_article {
 /*    transform: scale(1.2) !important;*/
 /*}*/
 .superzoom:hover {
-    transition: all .25s ease !important; 
+    transition: all .1s ease !important; 
     transform: scale(2) !important;
     z-index:1000 !important;
 }
