stack sites are link cards with description

--- a/parts/client/site.jade
+++ b/parts/client/site.jade
@@ -3,8 +3,8 @@ template(name='site_page')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    a.ui.circular.icon.button(href='/')
-                        i.large.home.icon
+                    // a.ui.circular.icon.button(href='/')
+                    //     i.large.home.icon
                     img(src=logo_url)
                     // img(src=icon_url)
                     // .ui.segment(style="background-color:#{styling.tag_background_color}")
