--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -56,8 +56,8 @@ template(name='layout')
         // .scrolling
         // if currentUser
         //     +bottom_nav
-    +chatpop
-    +footer
+    // +chatpop
+    // +footer
 
     
     
